[package]
name = "purple_elephant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.29.0"
solana-program = "=1.17.17"
arrayref = "0.3"

[lib]
name = "purple_elephant"
crate-type = ["cdylib", "lib"]
